@@ -32,8 +32,8 @@ if [ "$1" = "autoconf" ]; then
 fi
 
 # Try tailing a random file to check how arguments are passed
-`$LOGTAIL /etc/hosts 2>/dev/null >/dev/null`
 ARGS=0
+`$LOGTAIL /etc/hosts 2>/dev/null >/dev/null`
 if [ $? = 66 ]; then
     if [ ! -n "$logtail" ]; then
 	ARGS=1
